Long proofs to appendix, fix appendix links, add refs to examples

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -86,7 +86,10 @@ and mining rules.
 \vskip 0.2in
 \bibliography{refs}
 
+\renewcommand{\theHsection}{A\arabic{section}}
 \appendix
+%\renewcommand{\thesection}{\Alph{section}}
+\input{sections/appendix-bounds}
 \input{sections/appendix}
 
 \end{document}
