--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -1,255 +1,7 @@
-\section*{Appendix A. Excessive antecedent support}
+\section{Data processing details and antecedent mining}
+\label{appendix:data}
 
-\begin{theorem}[Upper bound on antecedent support]
-\label{thm:ub-support}
-Let ${\OptimalRL = (\Prefix, \Labels, \Default, K)}$
-be any optimal rule list with objective~$\OptimalObj$, \ie
-${\OptimalRL \in \argmin_\RL \Obj(\RL, \x, \y)}$,
-and let ${\Prefix = (p_1, \dots, p_{k-1},}$
-${p_k, \dots, p_K)}$ be its prefix.
-%
-For each ${k \le K}$, antecedent~$p_k$ in~$\Prefix$
-has support less than or equal to
-the fraction of all data not captured by preceding antecedents,
-by an amount greater than the regularization parameter~$\Reg$:
-\begin{align}
-\Supp(p_k, \x \given \Prefix) \le 1 - \Supp(\Prefix^{k-1}, \x) - \Reg,
-\label{eq:ub-support}
-\end{align}
-where ${\Prefix^{k-1} = (p_1, \dots, p_{k-1})}$.
-%
-For the last antecedent, \ie when ${p_k = p_K}$, equality implies
-that there also exists a shorter optimal rule list
-${\RL' = (\Prefix^{K-1}, \Labels', \Default', K - 1) \in}$ ${\argmin_\RL \Obj(\RL, \x, \y)}$.
-%with prefix~$\Prefix^{K-1}$.
-\end{theorem}
-
-\begin{proof}
-First, we focus on the last antecedent~$p_{K+1}$ in a rule list~$\RL'$.
-%
-Let ${\RL = (\Prefix, \Labels, \Default, K)}$
-be a rule list with prefix ${\Prefix = (p_1, \dots, p_K)}$
-and objective ${\Obj(\RL, \x, \y) \ge \OptimalObj}$, where
-${\OptimalObj \equiv}$ ${\min_{\RLB} \Obj(\RLB, \x, \y)}$
-is the optimal objective.
-%
-Let ${\RL' = (\Prefix', \Labels', \Default', K + 1)}$
-be a rule list whose prefix ${\Prefix' = (p_1, \dots, p_K, p_{K+1})}$
-starts with~$\Prefix$ and ends with a new antecedent~$p_{K+1}$.
-%
-Suppose~$p_{K+1}$ in the context of~$\Prefix'$ captures nearly all
-data not captured by~$\Prefix$, except for a fraction~$\epsilon$
-upper bounded by the regularization parameter~$\Reg$:
-\begin{align*}
-1 - \Supp(\Prefix, \x) - \Supp(p_{K+1}, \x \given \Prefix') \equiv \epsilon \le \Reg.
-\end{align*}
-%
-Since~$\Prefix'$ starts with~$\Prefix$,
-its prefix misclassification error is at least as great;
-the only discrepancy between the misclassification errors
-of~$\RL$ and~$\RL'$ can come from the difference between the support of
-the set of data not captured by~$\Prefix$ and the support of~$p_{K+1}$:
-\begin{align*}
-| \Loss(\RL', \x, \y) - \Loss(\RL, \x, \y) | \le
-1 - \Supp(\Prefix, \x) - \Supp(p_{K+1}, \x \given \Prefix') = \epsilon.
-\end{align*}
-The best outcome for~$\RL'$ would occur if its misclassification
-error were smaller than that of~$\RL$ by~$\epsilon$,
-%\eg this could happen if all data not captured by~$\Prefix'$
-%had the same class label, in which case the default rule of~$\RL'$
-%would incur zero misclassification error.
-% --> it's more complicated, would need to discuss minority class label, etc.
-%
-therefore
-\begin{align*}
-\Obj(\RL', \x, \y) &= \Loss(\RL', \x, \y) + \Reg (K+1) \\
-&\ge \Loss(\RL, \x, \y) - \epsilon + \Reg(K+1)
-= \Obj(\RL, \x, \y) - \epsilon + \Reg \ge \Obj(\RL, \x, \y) \ge \OptimalObj.
-\end{align*}
-$\RL'$ is an optimal rule list,
-\ie ${\RL' \in \argmin_{\RLB} \Obj(\RLB, \x, y)}$,
-if and only if ${\Obj(\RL', \x, \y) = \Obj(\RL, \x, \y) =}$ ${\OptimalObj}$,
-which requires ${\epsilon = \Reg}$.
-%
-Otherwise, ${\epsilon < \Reg}$, in which case
-\begin{align*}
-\Obj(\RL', \x, \y) \ge \Obj(\RL, \x, \y) - \epsilon + \Reg
-> \Obj(\RL, \x, \y) \ge \OptimalObj,
-\end{align*}
-therefore $\RL'$ is not optimal, \ie  ${\RL' \notin \argmin_{\RLB} \Obj(\RLB, \x, \y)}$.
-%
-This demonstrates the desired result for ${k = K}$.
-
-In the remainder, we prove the bound in~\eqref{eq:ub-support} by contradiction,
-in the context of a rule list~$\RL''$.
-%
-Let~$\RL$ and~$\RL'$ retain their definitions from above,
-thus as before, that the data not captured by~$\Prefix'$
-has normalized support~${\epsilon \le \Reg}$, \ie
-\begin{align*}
-1 - \Supp(\Prefix', \x) = 1 - \Supp(\Prefix, \x) - \Supp(p_{K+1}, \x \given \Prefix') = \epsilon \le \Reg.
-\end{align*}
-Thus for any rule list~$\RL''$ whose prefix
-$\Prefix'' = (p_1, \dots, p_{K+1}, \dots, p_{K'})$ starts
-with~$\Prefix'$ and ends with one or more additional rules,
-each additional rule~$p_k$ has support
-${\Supp(p_k, \x \given \Prefix'') \le}$ ${\epsilon \le \Reg}$,
-for all~${k > K+1}$.
-%
-By Theorem~\ref{thm:min-capture},
-all of the additional rules have insufficient support,
-therefore~$\Prefix''$ cannot be optimal,
-\ie ${\RL'' \notin \argmin_{\RLB} \Obj(\RLB, \x, \y)}$.
-\end{proof}
-
-Similar to Theorem~\ref{thm:min-capture}, our lower bound on
-antecedent support, we can apply Theorem~\ref{thm:ub-support}
-in the contexts of both constructing rule lists and
-rule mining~(\S\ref{sec:setup}).
-%
-Theorem~\ref{thm:ub-support} implies that if we only seek a single
-optimal rule list, then during branch-and-bound execution,
-we can prune a prefix if we ever add an antecedent with support
-too similar to the support of the set of data not captured by the
-preceding antecedents.
-%
-One way to view this result is that if
-${\RL = (\Prefix, \Labels, \Default, K)}$
-and ${\RL' = (\Prefix', \Labels', \Default', K + 1)}$
-are rule lists such that~$\Prefix'$ starts with~$\Prefix$
-and ends with an antecedent that captures all or nearly all
-data not captured by~$\Prefix$, then the new rule in~$\RL'$
-behaves similar to the default rule of~$\RL$.
-%
-As a result, the misclassification error of~$\RL'$ must be
-similar to that of~$\RL$, and any reduction may not be
-sufficient to offset the penalty for longer prefixes.
-
-\begin{proposition}[Excessive antecedent support propagates]
-\label{prop:ub-support}
-Define~$\StartContains(\Prefix)$ as in~\eqref{eq:start-contains},
-and let ${\Prefix = (p_1, \dots, p_{K})}$ be a prefix,
-such that its last antecedent~$p_{K}$ has excessive support,
-\ie the opposite of the bound in~\eqref{eq:ub-support}:
-\begin{align*}
-\Supp(p_K, \x \given \Prefix) > 1 - \Supp(\Prefix^{K-1}, \x) - \Reg,
-\end{align*}
-where ${\Prefix^{K-1} = (p_1, \dots, p_{K-1})}$.
-%
-Let ${\RLB = (\PrefixB, \LabelsB, \DefaultB, \kappa)}$
-be any rule list with prefix
-${\PrefixB =}$ ${(P_1, \dots, P_{\kappa})}$
-such that~$\PrefixB$ starts with ${\PrefixB^{K'-1} =}$
-${(P_1, \dots, P_{K'-1}) \in \StartContains(\Prefix^{K-1})}$
-and~${P_{K'} = p_{K}}$.
-%
-It follows that~$P_{K'}$ has excessive support in prefix~$\PrefixB$,
-and furthermore, ${\RLB \notin \argmin_{\RL} \Obj(\RL, \x, \y)}$.
-\end{proposition}
-
-\begin{proof}
-Since ${\PrefixB^{K'} = (P_1, \dots, P_{K'})}$
-contains all the antecedents in~$\Prefix$, we have that
-\begin{align*}
-\Supp(\PrefixB^{K'}, \x) \ge \Supp(\Prefix, \x).
-\end{align*}
-Expanding these two terms gives
-\begin{align*}
-\Supp(\PrefixB^{K'}, \x)
-&= \Supp(\PrefixB^{K'-1}, \x) + \Supp(P_{K'}, \x \given \PrefixB) \\
-&\ge \Supp(\Prefix, \x)
-= \Supp(\Prefix^{K-1}, \x) + \Supp(p_K, \x \given \Prefix)
-> 1 - \Reg.
-\end{align*}
-Rearranging gives
-\begin{align*}
-\Supp(P_{K'}, \x \given \PrefixB)
-> 1 - \Supp(\PrefixB^{K'-1}, \x) - \Reg,
-\end{align*}
-thus~$P_{K'}$ has excessive support in~$\PrefixB$.
-%
-By Theorem~\ref{thm:ub-support},
-${\RLB \notin \argmin_{\RL} \Obj(\RL, \x, \y)}$.
-\end{proof}
-
-\section*{Appendix B. Proof of Theorem~\ref{thm:similar} (Similar support bound)}
-
-We begin by defining four related rule lists.
-%
-First, let ${\RL = (\Prefix, \Labels, \Default, K)}$
-be a rule list with prefix ${\Prefix = (p_1, \dots, p_K)}$
-and labels ${\Labels = (q_1, \dots, q_K)}$.
-%
-Second, let ${\RLB = (\PrefixB, \LabelsB, \DefaultB, \kappa)}$
-be a rule list with prefix ${\PrefixB = (P_1, \dots, P_\kappa)}$
-and labels ${\LabelsB = (Q_1, \dots, Q_\kappa)}$.
-%
-Define~$\omega$ as in~\eqref{eq:omega}
-and~$\Omega$ as in~\eqref{eq:big-omega},
-and require that~${\omega, \Omega \le \Reg}$.
-%
-Third, let ${\RL' = (\Prefix', \Labels', \Default', K') \in}$
-${\StartsWith(\Prefix)}$ be any rule list
-whose prefix starts with~$\Prefix$, such that~${K' \ge K}$.
-%
-Denote the prefix and labels of~$\RL'$ by
-${\Prefix' = (p_1, \dots, p_K, p_{K+1}, \dots, p_{K'})}$
-and ${\Labels = (q_1, \dots, q_{K'})}$,
-respectively.
-%
-Finally, define
-${\RLB' = (\PrefixB', \LabelsB', \DefaultB', \kappa') \in \StartsWith(\PrefixB)}$
-to be the `analogous' rule list, \ie whose prefix
-${\PrefixB' =}$ ${(P_1, \dots, P_\kappa, P_{\kappa+1}, \dots, P_{\kappa'})
-= (P_1, \dots, P_\kappa, p_{K+1}, \dots, p_{K'})}$
-starts with~$\PrefixB$ and ends with the same ${K'-K}$
-antecedents as~$\Prefix'$.
-%
-Let ${\LabelsB' = (Q_1, \dots, Q_{\kappa'})}$
-denote the labels of~$\RLB'$.
-
-%Suppose that the lower bounds of~$\Prefix$ and~$\PrefixB$
-%obey ${b(\Prefix, \x, \y) < b(\PrefixB, \x, \y)}$.
-%
-The smallest possible objective for~$\RLB'$, in relation
-to the objective of~$\RL'$, reflects both the difference
-between the objective lower bounds of~$\RLB$ and~$\RL$
-and the largest possible discrepancy between the
-objectives of~$\RL'$ and~$\RLB'$.
-%
-The latter would occur if~$\RL'$ misclassified all the data
-corresponding to both~$\omega$ and~$\Omega$ while~$\RLB'$
-correctly classified this same data, thus
-\begin{align}
-\Obj(\RLB', \x, \y) \ge \Obj(\RL', \x, \y)
-  + b(\PrefixB, \x, \y) - b(\Prefix, \x, \y) - \omega - \Omega.
-\label{eq:similar-analogous}
-\end{align}
-%
-Now let~$\RLB^*$ be an optimal rule list with prefix
-constrained to start with~$\PrefixB$,
-\begin{align*}
-\RLB^* \in \argmin_{\RLB^\dagger \in \StartsWith(\PrefixB)} \Obj(\RLB^\dagger, \x, \y),
-\end{align*}
-and let~$\kappa^*$ be the length of~$\RLB^*$.
-%
-Also let~$\RL^*$ be the analogous $K^*$-rule list whose prefix
-starts with~$\Prefix$ and ends with the same~${\kappa^* - \kappa}$
-antecedents as~$\RLB^*$, where~${K^* = K + \kappa^* - \kappa}$.
-%
-By~\eqref{eq:similar-analogous},
-\begin{align*}
-\min_{\RLB^\dagger \in \StartsWith(\PrefixB)} \Obj(\RLB^\dagger, \x, \y)
-&= \Obj(\RLB^*, \x, \y) \\
-&\ge \Obj(\RL^*, \x, \y)
-  + b(\PrefixB, \x, \y) - b(\Prefix, \x, \y) - \omega - \Omega \\
-&\ge \min_{\RL^\dagger \in \StartsWith(\Prefix)} \Obj(\RL^\dagger, \x, \y)
-  + b(\PrefixB, \x, \y) - b(\Prefix, \x, \y) - \omega - \Omega.
-\end{align*}
-
-\section*{Appendix C. Data processing details and antecedent mining}
-
-\textbf{ProPublica recidivism dataset}
+\textbf{ProPublica recidivism dataset.}
 Table~\ref{tab:recidivism-data} shows the 7 attributes
 and corresponding 19 categorical values
 that we use for the ProPublica dataset.
@@ -356,7 +108,8 @@ inside or outside & inside, outside & 2 \\
 \label{tab:frisk-data}
 \end{table}
 
-\section*{Appendix D. Example optimal rule lists, for different values of~$\Reg$}
+\section{Example optimal rule lists, for different values of~$\Reg$}
+\label{appendix:examples}
 
 For each of our prediction problems, we provide listings of
 optimal rule lists found by CORELS, across 10 cross-validation folds,
