--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -181,8 +181,8 @@ in Figure~\ref{fig:weapon-rule-list} has the spirit of the heuristic
 strategy presented by~\citet{Goel16} that combines three stop criteria
 and is based on a reduced version of their full regression model.
 %
-For each of our prediction problems, see Appendix~\ref{appendix:examples} for listings of
-optimal rule lists found by CORELS, across cross-validation folds,
+See Appendix~\ref{appendix:examples} for listings of optimal rule lists found
+by CORELS, for each of our prediction problems, across cross-validation folds,
 for different values of the regularization parameter~$\Reg$.
 
 \subsection{Comparison of accuracy and model size for CORELS and other algorithms}
